# storycodex

./: .gitignore  README.md  WORLDCODEX_ALIGNMENT_PLAN.md  instructions.txt  pyproject.toml
demo_story/artifacts/: registry.json
demo_story/artifacts/inputs/: manifest.json  story_spec.json
demo_story/artifacts/plot/: spine.json  spine.meta.json
demo_story/artifacts/scenes/: scene_001.plan.json  scene_002.plan.json  scene_003.plan.json  scene_004.plan.json  scene_005.plan.json  scene_006.plan.json  scene_007.plan.json  scene_008.plan.json  scene_009.plan.json  scene_010.plan.json  scene_011.plan.json  scene_012.plan.json  scene_013.plan.json  scene_014.plan.json  scene_015.plan.json  scene_016.plan.json  (+4 more)
demo_story/seeds/: story_overrides.json
storycodex/: __init__.py  build_context.py  check_continuity.py  cli.py  defaults.py  llm.py  merge.py  paths.py  plan_beats.py  plan_scenes.py  plan_spine.py  seed_apply.py  worldcodex_client.py  worldcodex_patch_proposal.py  write_diary.py  write_scene.py
storycodex/schemas/: continuity-report.schema.json  plot-intent.schema.json  plot-spine.schema.json  scene-beats.schema.json  scene-context-packet.schema.json  scene-patch.schema.json  scene-plan.schema.json  scenes-index.schema.json  story-spec.schema.json  style-profile.schema.json
tests/: test_build_context.py  test_check_continuity.py  test_init.py  test_llm.py  test_merge.py  test_plan_beats.py  test_plan_scenes.py  test_plan_spine.py  test_seed_apply.py  test_worldcodex_client.py  test_worldcodex_flow.py  test_worldcodex_patch_proposal.py  test_write_scene.py
