[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storycodex"
version = "0.1.0"
description = "StoryCodex CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.9.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
storycodex = "storycodex.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["storycodex*"]

[tool.setuptools.package-data]
storycodex = ["schemas/*.json"]
