[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storycodex"
version = "0.0.1"
description = "StoryCodex CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "rich>=13",
  "jsonschema>=4"
]

[project.scripts]
storycodex = "storycodex.cli:main"

[tool.setuptools]
packages = ["storycodex"]
include-package-data = true

[tool.setuptools.package-data]
storycodex = ["schemas/*.json"]
